Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -49,7 +49,7 @@ podcast:
   categories: News & Politics
   image: '/img/podcast.png'
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Greater Calgary Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from the Greater Calgary Group - your professional Calgary Real Estate Agents.'
+  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from the Greater Property Group Calgary - your professional Calgary Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Calgary, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: Greater Property Group Calgary
 images:
