Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,7 +9,7 @@ client:
   name:
   license_number:
   about_markdown: |
-    The Greater Calgary Group with Re/Max First is a boutique real estate firm comprised of premier real estate professionals working together to serve Calgary and Area.  We offer the best of both world's - the power of an international brand and personalized service of a boutique office.
+    The Greater Property Group Calgary with Re/Max First is a boutique real estate firm comprised of premier real estate professionals working together to serve Calgary and Area.  We offer the best of both world's - the power of an international brand and personalized service of a boutique office.
 
     Our goal is to provided our local and international clients with exceptional, personalized service, while remaining flexible and innovative so we can thrive in any economic cycle.  Our team provides the tools needed to achieve prominence in the marketplace through education, technology, and training.
   market:
