--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -27,7 +27,7 @@ CTAs:
   first_CTA_URL: http://www.searchwihomes.com/cma/property-valuation/
   second_CTA_text: Home Search
   second_CTA_URL: http://www.searchwihomes.com/
-  VR_form:
+  VR_form: http://oi.vresp.com?fid=1f843e1590
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/005.jpg
