Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -95,7 +95,7 @@ socials:
   yelp_url: 'https://www.yelp.com/biz/becky-ivins-movers-real-estate-oklahoma-city'
   podcast_url:
 podcast:
-  title:
+  title: Becky Ivins Movers Real Estate Podcast
   categories:
     - Education
   image: /img/podcast.jpg
