Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ description: 'If you are looking to buy or sell a home, get all the information 
 show_custom_links: true
 custom_links:
   - title: Careers
-    url: http://clickcharlestonsc.com/resources.php
+    url: https://dave-friedman-team.breezy.hr/
   - title: Meet the Team
     url: http://clickcharlestonsc.com/agents.php
   - title: Partners
