--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,93 +1,95 @@
 audit_header: false
-title: -- CLIENT BRAND --
+title: '-- CLIENT BRAND --'
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: true
 custom_links:
   - title: About
-    url: https://www.guardianmortgageonline.com/our-story/
+    url: 'https://www.guardianmortgageonline.com/our-story/'
   - title: Mortgage Map
-    url: http://gmc29.mortgagemapp.com/
+    url: 'http://gmc29.mortgagemapp.com/'
   - title: Agent Training
     url: /agent-training
   - title: Meet the Team
     url: /meet-the-team
-
 client:
   name: Wade Betz
-  license_number: 'NMLS #280613'
-  about_markdown: |
-    Wade joined Guardian Mortgage Company in January 2006 as a vice president of sales and branch manager at our <br> Dallas, Texas location. <br>
+  license_number:
+  about_markdown: >-
+    Wade joined Guardian Mortgage in January 2006 as a vice president of sales
+    and branch manager at our
+
+    <br>Dallas, Texas location.
+
     <br>
-    Wade has a message for Guardian’s customers. There’s more to a mortgage than the close. Wade, like his Guardian counterparts, understands that a job well done is a job that lasts the duration of the home loan. Counsel, support and personal service are paramount to becoming a trusted mortgage advisor for Guardian’s clients.
+
+    <br>Wade has a message for Guardian’s customers. There’s more to a mortgage
+    than the close. Wade, like his Guardian counterparts, understands that a job
+    well done is a job that lasts the duration of the home loan. Counsel, support
+    and personal service are paramount to becoming a trusted mortgage advisor for
+    Guardian’s clients.
   market:
   brand: The Betz Team
-  brokerage: Guardian Mortgage Company, Inc.
-  address: 5910 North Central Expressway <br> Ste 725, Dallas, TX 75206
+  brokerage: Guardian Mortgage
+  address: '5910 North Central Expressway <br> Ste 725, Dallas, TX 75206'
   phone: 214-361-5626
   phone_type: Direct
   phone2:
   phone2_type:
   email: TheBetzTeam@gmc-inc.com
-  url: http://TheBetzTeam.com
-
+  url: 'http://TheBetzTeam.com'
 CTAs:
   first_CTA_text: Apply Online
-  first_CTA_URL: https://apply.guardianmortgageonline.com/signup?referrerId=TheBetzTeam@gmc-inc.com
+  first_CTA_URL: 'https://apply.guardianmortgageonline.com/signup?referrerId=TheBetzTeam@gmc-inc.com'
   second_CTA_text: Request a Consultation
-  second_CTA_URL: https://calendly.com/wadebetz/phone-consultation/11-22-2016?back=1
-  VR_form: http://oi.vresp.com?fid=41c99825aa
-
+  second_CTA_URL: 'https://calendly.com/wadebetz/phone-consultation/11-22-2016?back=1'
+  VR_form: 'http://oi.vresp.com?fid=41c99825aa'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/006.jpg
     CTA_title: Ask Me A Question
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Request a Consultation
-    CTA_url: https://calendly.com/wadebetz/phone-consultation/11-22-2016?back=1
-
+    CTA_url: 'https://calendly.com/wadebetz/phone-consultation/11-22-2016?back=1'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
     Our mission at -- CLIENT BRAND -- is to be your best resource for financial
     advice. Whether you are a buyer, seller, or investor, our team of
-    professionals can answer any questions you might have about the lending process.
-    Subscribe to this blog to get the latest news on loans for purchase, refinance,
-    construction or cashout of residential and commercial property.
-
+    professionals can answer any questions you might have about the lending
+    process. Subscribe to this blog to get the latest news on loans for purchase,
+    refinance, construction or cashout of residential and commercial property.
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/TheBetzTeam
-  linkedin_url: https://www.linkedin.com/in/wadebetz
-  gplus_url: https://plus.google.com/117707470100192820992
-  youtube_url: https://www.youtube.com/channel/UCnGrNrabM_Xeuz0Eidj9qsQ
-  twitter_url: https://twitter.com/winningwithwade
+  facebook_url: 'https://www.facebook.com/TheBetzTeam'
+  linkedin_url: 'https://www.linkedin.com/in/wadebetz'
+  gplus_url: 'https://plus.google.com/117707470100192820992'
+  youtube_url: 'https://www.youtube.com/channel/UCnGrNrabM_Xeuz0Eidj9qsQ'
+  twitter_url: 'https://twitter.com/winningwithwade'
   instagram_url:
   pinterest_url:
   zillow_url:
   trulia_url:
-  yelp_url: http://www.yelp.com/biz/the-betz-team-guardian-mortgage-company-plano
-  podcast_url: https://itunes.apple.com/us/podcast/winning-wade-guardian-mortgage/id1178107062?mt=2
-
+  yelp_url: 'http://www.yelp.com/biz/the-betz-team-guardian-mortgage-company-plano'
+  podcast_url: 'https://itunes.apple.com/us/podcast/winning-wade-guardian-mortgage/id1178107062?mt=2'
 podcast:
   title: The Betz Team Mortgae Podcast
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
   subtitle: 'A podcast for home buyers curious about the lending process. Learn Tips, tricks and more educational material from The Betz Team'
-  description: Get all the information and and the latest updates, tips, and tricks of Personal Finance and Mortgages from The Betz Team
+  description: 'Get all the information and and the latest updates, tips, and tricks of Personal Finance and Mortgages from The Betz Team'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
@@ -97,18 +99,16 @@ images:
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#B5C6D5'
-  theme_color: '#00422D'
+  brand_color: '#b5c6d5'
+  theme_color: '#00422d'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "#000"
-
+  shadow_color: '#000000'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
