Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ show_custom_links: true
 custom_links:
   - title: About
     url: 'https://www.guardianmortgageonline.com/our-story/'
-  - title: Mortgage Map
+  - title: Mortgage Mapp
     url: 'http://gmc29.mortgagemapp.com/'
   - title: Agent Training
     url: /agent-training
