Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -33,12 +33,12 @@ welcome_text_markdown: |
   Our mission at the Greater Property Group Calgary is to be your best resource for real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. Subscribe to this blog to get the latest news on local market trends and receive expert tips for buying or selling a home.
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/GreaterCalgaryGroup/?fref=ts
-  linkedin_url: https://www.linkedin.com/company/the-greater-calgary-group-at-remax-first?trk=biz-companies-cym
+  facebook_url: https://www.facebook.com/GPGCalgary/
+  linkedin_url: https://www.linkedin.com/company-beta/6454297/
   gplus_url: https://plus.google.com/u/0/b/115640214646472043359/115640214646472043359/about?_ga=1.96115925.859963669.1470700688
   youtube_url: https://www.youtube.com/channel/UCGVb90uFiLPbTQ6_DS5K-kQ
-  twitter_url: https://twitter.com/GCG_Marketing
-  instagram_url: https://www.instagram.com/greatercalgarygroup/
+  twitter_url: https://twitter.com/GPGCalgary
+  instagram_url: https://www.instagram.com/gpgcalgary/
   pinterest_url:
   zillow_url:
   trulia_url:
