Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ client:
   market: Sacramento
   brand: Heidi Phong Real Estate Team
   brokerage:
-  address: 5648 Belleview Ave Sacramento, CA 95824<br>7803 Laguna Blvd Suite 200, Elk Grove, CA 95758
+  address: 5648 Belleview Ave Sacramento, CA 95824<br>9105 Bruceville, Suite 6A, Elk Grove, CA 95758
   phone: 916-800-3557
   phone_type:
   phone2:
