--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -34,8 +34,8 @@ sidebar_CTA:
   CTA_url: http://www.hhande.com/home-evaluation.php
 second_sidebar_CTA:
     CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
+    CTA_title2: "Looking for a Home?"
+    CTA_text2: "Search the entire MLS for your home."
     CTA_link_text2: "Search the MLS"
     CTA_url2: http://www.hhande.com/
 welcome_box:
