Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -81,7 +81,7 @@ podcast:
   subtitle: 'Find your best resource for valuable information, strategy and tips on how to improve your health and your life'
   description: 'If you are looking for your best resource for valuable information, strategy and tips on how to improve your health and your life -- get all the information and the latest updates from Dr. Q and Dr. Ho - the latest updates from Dr. Q and Dr. Ho'
   keywords: 'Chiropractic, Wellness, Exercise, General Health, Nutrition'
-  author: 'Dr Q'
+  author: 'Dr Q and Dr. Ho'
 
 images:
   client_headshot_path: /img/headshots.jpg
