Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,8 +76,8 @@ socials:
 
 podcast:
   title: Hacking Your Health Podcast
-  categories: Education
-  image: /img/podcast.png
+  categories: Health
+  image: http://i.imgur.com/a2S4pM5.png
   subtitle: 'Find your best resource for valuable information, strategy and tips on how to improve your health and your life'
   description: 'If you are looking for your best resource for valuable information, strategy and tips on how to improve your health and your life -- get all the information and the latest updates from Dr. Q and Dr. Ho - the latest updates from Dr. Q and Dr. Ho'
   keywords: 'Chiropractic, Wellness, Exercise, General Health, Nutrition'
