--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,6 +9,8 @@ custom_links:
     url: 'https://www.wickerhomesgroup.com/agents/'
   - title: 19-Point Selling System
     url: 'https://www.yumpu.com/en/document/view/55525349/wicker-homes-group-listing-presentation-2016'
+  - title: Why Sell With WHG
+    url: 'http://sellwithwhg.com/'
 client:
   name:
   license_number:
