Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -74,7 +74,7 @@ podcast:
   categories: Education
   image: http://i.imgur.com/YVy7X4T.jpg
   subtitle: 'Learn all the tips, tricks and more to better prepare yourself for the future.'
-  description: 'Our mission at -- CLIENT BRAND -- is to be your best resource for financial advice. Our team of professionals can answer any questions you might have about finance. Subscribe to this blog to get the latest news on finance and receive expert tips for preparing yourself for your financial future.'
+  description: 'Our mission at -- CLIENT BRAND -- is to be your best resource for financial advice. Our team of professionals can answer any questions you might have about finance. Subscribe to this podcast to get the latest news on finance and receive tips for preparing yourself for your financial future.'
   keywords: 'finance, financial planning, retirement, retirement planning, 401K'
   author: '-- CLIENT NAME --'
 
