Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,7 +9,9 @@ client:
   name: Andrew Kronenberg
   license_number:
   about_markdown: >-
-        Realtor specializing in residential listings and buyers, new construction and commercial/investment leasing and purchase
+        Andrew was born and raised in Carlisle. The Kronenberg family has been in the area for four generations as small business owners and community leaders. Andrew says, “I have always felt a sense of accountability to my hometown and a need to contribute towards the responsible growth of our community. I take great pride in my profession for that reason.” A graduate of Carlisle High School, Andrew continued his education at Penn State University and earned a degree in Agribusiness Management and Economics.
+        
+        As a Carlisle, PA area Realtor, Andrew offers a wide spectrum of services, including residential real estate sales, new construction, commercial sales and leases, residential and commercial development, and has individual investment properties. He has extensive experience and knowledge in most facets of real estate. Andrew is proud of the relationships he has developed with his clients. He works hard to ensure the transaction provides as much investment growth as it does emotional satisfaction.
   market: Pennsylvania
   brand: 'Hooke, Hooke & Eckman Realtors, LLC'
   brokerage:
