Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,7 +17,7 @@ client:
   brokerage:
   address: '977 Walnut Bottom Road<br>Carlisle, PA 17015'
   phone: 717-249-1844
-  phone_type:
+  phone_type: 717-609-8265
   phone2:
   phone2_type:
   email: andrew@thinkhhe.com
