Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,7 +4,7 @@ description: 'If you are looking to buy or sell a home, get all the information 
 show_custom_links: true
 custom_links:
   - title: About
-    url: 'https://www.guardianmortgageonline.com/our-story/'
+    url: 'https://www.guardianmortgageonline.com/loan-officers/dallas-home-loan-officer-wade-betz/'
   - title: Mortgage Mapp
     url: 'http://gmc29.mortgagemapp.com/'
   - title: Agent Training
