--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -43,7 +43,7 @@ CTAs:
   first_CTA_text: Apply Online
   first_CTA_URL: 'https://apply.guardianmortgageonline.com/signup?referrerId=TheBetzTeam@gmc-inc.com'
   second_CTA_text: Request a Consultation
-  second_CTA_URL: 'https://calendly.com/wadebetz/phone-consultation/11-22-2016?back=1'
+  second_CTA_URL: 'https://calendly.com/thebetzteam'
   VR_form: 'http://oi.vresp.com?fid=41c99825aa'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/006.jpg
