Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -72,7 +72,7 @@ socials:
   linkedin_url: https://www.linkedin.com/in/alex-lam-6b10214/
   gplus_url:
   youtube_url:
-  twitter_url:
+  twitter_url: https://twitter.com/Alex_Lam_yvr
   instagram_url:
   pinterest_url:
   zillow_url:
