--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: Salt Lake County Real Estate Video Blog with Joshua Stern
+title: Salt Lake city Real Estate Video Blog with Joshua Stern
 description: 'Josh Stern leads The Stern Team, a full-service real estate team that has helped sell and purchase thousands of Salt Lake City area homes since 2002. For the last few years, they have sold about a property a day! If you are looking to buy or sell a Utah home and would like to receive all of the latest market updates, tips, and tricks, make sure to follow The Stern Team, your best Salt Lake City area real estate agents.'
 show_custom_links: true
 custom_links:
@@ -7,7 +7,7 @@ custom_links:
     url: http://www.viewsaltlakecityareahomes.com/about/
   - title: Testimonials
     url: https://soundcloud.com/joshua-stern-5
-client: 
+client:
   name: Joshua Stern
   license_number:
   about_markdown: |
@@ -16,7 +16,7 @@ client:
     The Stern Team motto is “clients don’t care how much we know, until they know how much we care”. Their philosophy is that when you take care of others needs, your needs are automatically taken care of. The Stern Team is one of the top real estate groups in North America and the #1 resale team in Utah.
 
     If you're looking to buy, sell or invest in a home to live in Salt Lake, Joshua Stern and his team are here to ensure you have an excellent real estate experience.
-  market: Salt Lake County
+  market: Salt Lake city
   brand: The Stern Team
   brokerage: Keller Williams
   address: "2121 S McClelland, Ste. #201<br>Salt Lake City, UT 84106"
@@ -49,12 +49,12 @@ socials:
   yelp_url: http://www.yelp.com/biz/joshua-stern-salt-lake-city
   podcast_url: https://itunes.apple.com/us/podcast/salt-lake-county-real-estate/id1183406593?mt=2
 podcast:
-  title: Salt Lake County Real Estate Podcast with Joshua Stern
+  title: Salt Lake city Real Estate Podcast with Joshua Stern
   categories: News &amp; Politics
   image: /img/Stern_podcast.png
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Salt Lake County Real Estate Market'
-  description: 	If you are looking to buy or sell a Salt Lake County home, get all the information and the latest updates, tips, and tricks from The Stern Team - your professional Salt Lake City Real Estate Agents.
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Salt Lake County, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Salt Lake city Real Estate Market'
+  description: 	If you are looking to buy or sell a Salt Lake city home, get all the information and the latest updates, tips, and tricks from The Stern Team - your professional Salt Lake City Real Estate Agents.
+  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Salt Lake city, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: Joshua Stern
 images:
   client_headshot_path: '/img/headshot.jpg'
