Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ client:
   name: John Meulstee
   license_number: RS303707
   about_markdown: |
-
+       Hi, I’m John Meulstee, team leader of The John Meulstee Home Selling Team at Realty One Group Legacy. As expert real estate advisers serving the Bucks County and Montgomery County real estate market, our team has over 100 years of combined experience. We specialize in selling homes at the top of the market with the least amount of hassles! Please take some time to look around this blog which highlights my services offered. I look forward to hearing from you soon and having the opportunity to earn your business!
   market:
   brand: John Meulstee Home Selling Team
   brokerage: Realty One Group Legacy
