--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: John Meulstee Home Selling Team
+title: John Meulstee 
 description: A Video Blog about -- MARKET -- Real Estate; It's industry, and the people working in it. Whether you're just starting out, aspiring to begin, or been working in the field for a few years, tune in to get updates, tips, tricks and more!
 show_custom_links: false
 custom_links:
@@ -12,7 +12,7 @@ client:
   about_markdown: |
        Hi, I’m John Meulstee, team leader of The John Meulstee Home Selling Team at Realty One Group Legacy. As expert real estate advisers serving the Bucks County and Montgomery County real estate market, our team has over 100 years of combined experience. We specialize in selling homes at the top of the market with the least amount of hassles! Please take some time to look around this blog which highlights my services offered. I look forward to hearing from you soon and having the opportunity to earn your business!
   market: Realty One Group Legacy
-  brand: John Meulstee Home Selling Team
+  brand: John Meulstee 
   brokerage:
   address: 405 Farm Lane Doylestown, PA 18901
   phone: 215-622-9772
@@ -87,7 +87,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: -- MARKET -- Real Estate Careers and Training Video Blog
+  hero_text: -- MARKET -- Real Estate Careers <br><br> and Training Video Blog
   hero_background_hex: '#91CEC6'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
