--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -87,7 +87,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: -- MARKET -- Real Estate Careers <br><br> and Training Video Blog
+  hero_text: -- MARKET -- Real Estate Careers <br> and Training Video Blog
   hero_background_hex: '#91CEC6'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
