Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,9 +12,9 @@ custom_links:
   - title: Consumer Protection Notice
     url: 'http://vyralmarketing.s3.amazonaws.com/Jesse%20Myles/Consumer%20Protection.pdf'
 client:
-  name: Jesse Myles
+  name: 'Jesse Myles, REALTOR'
   license_number: 555916
-  about_markdown: "The Myles Group is comprised of a team of local real estate professionals committed to selling some of the most desired homes in Greater Harker Heights. Selling these \"right addresses\" is the mission of The Myles Group. Let us know what you're looking for. Please take advantage of the helpful tools on this website, including our exclusive Greater Harker Heights Real Estate search, but also feel free to contact us personally."
+  about_markdown: "The Myles Group is comprised of a team of local real estate professionals committed to selling some of the most desired homes in Greater Harker Heights. Selling these \"right addresses\" is the mission of The Myles Group. Let us know what you're looking for. Please take advantage of the helpful tools on this website, including our exclusive Greater Harker Heights Real Estate search, but also feel free to contact us personally. Each Keller Willams Office is Independently Owned and Operated."
   market: Greater Harker Heights
   brand: The Myles Group
   brokerage: Keller Williams
