--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,11 +4,9 @@ description: 'If you are looking to buy or sell a home, get all the information 
 show_custom_links: true
 custom_links:
   - title: Featured Listings
-    url: http://www.viewcentralpahomes.com/featured/
-  - title: Communities
-    url: http://www.hhande.com/communities.php
+    url: http://www.viewcentralpahouses.com/our-homes
   - title: About
-    url: http://www.viewcentralpahomes.com/about/
+    url: http://www.viewcentralpahouses.com/our-agents
 
 client:
   name: Dave Hooke
@@ -30,7 +28,7 @@ CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: http://www.viewcentralpahomes.com/homevalue/
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.viewcentralpahomes.com/
+  second_CTA_URL: http://www.viewcentralpahouses.com/
   VR_form: http://oi.vresp.com?fid=1593df562e
 
 sidebar_CTA:
